--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         const resultsPre = document.getElementById('results');
         const copyButton = document.getElementById('copyButton');
 
-        const apiUrl = 'http://127.0.0.1:5000/api/execute';
+        const apiUrl = '/api/execute';
 
         // Lógica para el botón de Analizar
         analyzeButton.addEventListener('click', async () => {
